my first ai structure done

--- a/server/agent/package.json
+++ b/server/agent/package.json
@@ -1,6 +1,7 @@
 {
   "name": "agent",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,5 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@langchain/core": "^0.3.57",
+    "@langchain/google-genai": "^0.2.10",
+    "@langchain/langgraph": "^0.2.74",
+    "dotenv": "^16.5.0",
+    "zod": "^3.25.42"
+  }
 }
