--- a/server/agent/package.json
+++ b/server/agent/package.json
@@ -14,7 +14,10 @@
     "@langchain/core": "^0.3.57",
     "@langchain/google-genai": "^0.2.10",
     "@langchain/langgraph": "^0.2.74",
+    "@types/express": "^5.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "zod": "^3.25.42"
   }
 }
