--- a/RAG/package.json
+++ b/RAG/package.json
@@ -21,6 +21,7 @@
     "@langchain/langgraph": "^0.3.0",
     "@types/node": "^22.15.29",
     "dotenv": "^16.5.0",
+    "langchain": "^0.3.27",
     "langsmith": "^0.3.30",
     "tsx": "^4.19.4",
     "zod": "^3.25.51"
